sonarqube/svc-sonarqube.yml
apiVersion: v1
kind: Service
metadata:
  name: sonar-sonarqube
  namespace: sonarqube
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: sonar
    app.kubernetes.io/name: sonarqube
